# colcon-xmake

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml  release.yml
colcon_xmake/package_identification/: __init__.py  xmake.py
colcon_xmake/task/: __init__.py  rosidl.py  test_result.py
colcon_xmake/task/ament_xmake/: __init__.py  build.py  test.py
colcon_xmake/task/xmake/: __init__.py  build.py  test.py
docs/: RELEASE.md  TESTING.md  USAGE.md
scripts/: publish.sh
test/: test_arguments.py  test_identification.py  test_ros_index.py  test_rule_resolution.py  test_smoke.py  test_task_utils.py  test_test_result.py
