[metadata]
name = colcon-xmake
version = 0.1.0
description = colcon extension for xmake and ros.ament_xmake packages
license = Apache-2.0
url = https://github.com/ros-x/colcon-xmake
project_urls =
    Source = https://github.com/ros-x/colcon-xmake
    Tracker = https://github.com/ros-x/colcon-xmake/issues

[options]
packages = find:
install_requires =
    colcon-core>=0.16.0

[options.entry_points]
colcon_core.package_identification =
    xmake = colcon_xmake.package_identification.xmake:XmakePackageIdentification
colcon_core.task.build =
    xmake = colcon_xmake.task.xmake.build:XmakeBuildTask
    ros.ament_xmake = colcon_xmake.task.ament_xmake.build:AmentXmakeBuildTask
colcon_core.task.test =
    xmake = colcon_xmake.task.xmake.test:XmakeTestTask
    ros.ament_xmake = colcon_xmake.task.ament_xmake.test:AmentXmakeTestTask

[tool:pytest]
python_files = test_*.py
