[metadata]
name = colcon-xmake
version = 0.1.0
description = colcon extension for xmake and ros.ament_xmake packages
long_description = file: README.md
long_description_content_type = text/markdown
author = sunrisepeak
author_email = speakshen@163.com
license = Apache-2.0
url = https://github.com/ros-x/colcon-xmake
project_urls =
    Source = https://github.com/ros-x/colcon-xmake
    Tracker = https://github.com/ros-x/colcon-xmake/issues
    Changelog = https://github.com/ros-x/colcon-xmake/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Build Tools
keywords = colcon xmake ros2 ament

[options]
python_requires = >=3.10
packages = find:
zip_safe = true
install_requires =
    colcon-core>=0.16.0

[options.entry_points]
colcon_core.package_identification =
    xmake = colcon_xmake.package_identification.xmake:XmakePackageIdentification
colcon_core.task.build =
    xmake = colcon_xmake.task.xmake.build:XmakeBuildTask
    ros.ament_xmake = colcon_xmake.task.ament_xmake.build:AmentXmakeBuildTask
colcon_core.task.test =
    xmake = colcon_xmake.task.xmake.test:XmakeTestTask
    ros.ament_xmake = colcon_xmake.task.ament_xmake.test:AmentXmakeTestTask

[tool:pytest]
python_files = test_*.py
